# openai_realtime_api_test

./: README.md  audio_util.py  push_to_talk_app.py  pyproject.toml  realtime_api_VAD.py  realtime_api_VAD_off.py  realtime_api_VAD_off_cancel.py  realtime_api_VAD_tools.py  realtime_api_console.py  realtime_api_file.py  realtime_api_text.py  realtime_api_text_tool.py  search_tools.py
realtime_webrtc/: secret_server.py
realtime_webrtc/static/js/: main.js
realtime_webrtc/templates/: index.html
templates/: index.html
