[project]
name = "realtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "getchar>=2.0.0",
    "googlesearch-python>=1.3.0",
    "numpy>=2.2.2",
    "openai[realtime]>=1.60.0",
    "ptpython>=3.0.29",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "textual>=1.0.0",
    "textual-dev>=1.7.0",
]
